Closed
Bug 1973591
Opened 7 months ago
Closed 2 months ago
Crash in [@ wgpu_core::storage::Storage<T>::remove]
Categories
(Core :: Graphics: WebGPU, defect)
Tracking
()
RESOLVED
FIXED
146 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr140 | --- | disabled |
| firefox144 | --- | wontfix |
| firefox145 | --- | wontfix |
| firefox146 | --- | fixed |
People
(Reporter: ErichDonGubler, Assigned: teoxoy)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/c6466e41-6635-4309-90c5-b38f10250622
MOZ_CRASH Reason:
assertion `left == right` failed
left: 1
right: 3
Top relevant frames:
10 wgpu_core::device::global::<impl wgpu_core::global::Global>::buffer_drop third_party/rust/wgpu-core/src/device/global.rs:285 cfi
11 mozilla::webgpu::WebGPUParent::RecvSwapChainDrop(mozilla::layers::RemoteTextureOwnerId const&, unsigned int, unsigned long long) dom/webgpu/ipc/WebGPUParent.cpp:1632 cfi
12 mozilla::webgpu::ReadbackPresentCallback(unsigned char*, mozilla::webgpu::ffi::WGPUBufferMapAsyncStatus)::$_0::operator()() const dom/webgpu/ipc/WebGPUParent.cpp:1084 inlined
12 mozilla::ScopeExit<mozilla::webgpu::ReadbackPresentCallback(unsigned char*, mozilla::webgpu::ffi::WGPUBufferMapAsyncStatus)::$_0>::~ScopeExit() mfbt/ScopeExit.h:106 inlined
12 mozilla::ScopeExit<mozilla::webgpu::ReadbackPresentCallback(unsigned char*, mozilla::webgpu::ffi::WGPUBufferMapAsyncStatus)::$_0>::~ScopeExit() mfbt/ScopeExit.h:104 inlined
12 mozilla::webgpu::ReadbackPresentCallback(unsigned char*, mozilla::webgpu::ffi::WGPUBufferMapAsyncStatus) dom/webgpu/ipc/WebGPUParent.cpp:1166 cfi
13 <alloc::boxed::Box<F, A> as core::ops::function::FnOnce<Args>>::call_once /builds/worker/fetches/rustc/lib/rustlib/src/rust/library/alloc/src/boxed.rs:1976 inlined
13 wgpu_core::device::UserClosures::fire third_party/rust/wgpu-core/src/device/mod.rs:182 cfi
14 wgpu_core::device::global::<impl wgpu_core::global::Global>::poll_all_devices third_party/rust/wgpu-core/src/device/global.rs:2048 cfi
15 wgpu_server_poll_all_devices gfx/wgpu_bindings/src/server.rs:187 cfi
| Assignee | ||
Comment 1•3 months ago
|
||
There were also a few instances of "Cannot remove a vacant resource" in command_encoder_drop, these have been fixed by Bug 1981225.
The remaining are epoch mismatches in ReadbackPresentCallback which I think is a regression from D252687. SwapChainDrop might not immediately drop the readback buffers in the parent actor, meanwhile the child actor will try to reuse the IDs.
Assignee: nobody → ttanasoaia
Status: NEW → ASSIGNED
| Assignee | ||
Updated•3 months ago
|
| Assignee | ||
Updated•3 months ago
|
| Assignee | ||
Comment 2•2 months ago
|
||
Pushed by ttanasoaia@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/ec8a6a54a047
https://hg.mozilla.org/integration/autoland/rev/acca32fb0d6b
Avoid freeing swapchain buffer IDs too early. r=webgpu-reviewers,aleiserson
Comment 4•2 months ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
status-firefox146:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 146 Branch
Updated•2 months ago
|
status-firefox144:
--- → wontfix
status-firefox145:
--- → wontfix
status-firefox-esr115:
--- → unaffected
status-firefox-esr140:
--- → disabled
Updated•2 months ago
|
QA Whiteboard: [qa-triage-done-c147/b146]
You need to log in
before you can comment on or make changes to this bug.
Description
•