Bug 1973591 - Avoid freeing swapchain buffer IDs too early. r=webgpu-reviewers,aleiserson

Differential Revision: https://phabricator.services.mozilla.com/D269784