dom/webgpu/CanvasContext.h
@@ -113,7 +113,6 @@ class CanvasContext final : public nsICanvasRenderingContextInternal,
 
   Maybe<layers::RemoteTextureId> mLastRemoteTextureId;
   Maybe<layers::RemoteTextureOwnerId> mRemoteTextureOwnerId;
-  nsTArray<RawId> mBufferIds;
   RefPtr<layers::FwdTransactionTracker> mFwdTransactionTracker;
   bool mUseSharedTextureInSwapChain = false;
   bool mNewTextureRequested = false;
